# sdk-python

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
docs/: api.rst  conf.py  django.rst  exceptions.rst  index.rst
kabelwerk/: __init__.py  apps.py  config.py  exceptions.py  models.py  utils.py
kabelwerk/api/: __init__.py  base.py  rooms.py  users.py
tests/: conftest.py  test_api_base.py  test_api_rooms.py  test_api_users.py  test_config.py
